# az-jina-mcp

./: .gitignore  Dockerfile  README.md  acr-build.yaml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc
infra/terraform/modules/aca/app/: main.tf  outputs.tf  variables.tf
infra/terraform/stacks/20-workload/: main.tf  outputs.tf  variables.tf
ops/: pyproject.toml
ops/ops/: __init__.py  _deploy_common.py  _utils.py  build_and_push.py  build_and_push_reader.py  deploy_bootstrap.py  deploy_workload.py
src/: index.ts
src/tools/: jina-tools.ts
terraform/modules/aca/app/: main.tf
terraform/stacks/00-bootstrap/: terraform.tfvars.dev.example
terraform/stacks/20-workload/: main.tf  outputs.tf  terraform.tfvars.dev.example
